# tables

./: Cargo.toml  README.md  flake.nix  package-lock.json  package.json
dnas/tables/workdir/: dna.yaml
dnas/tables/zomes/coordinator/profiles/: Cargo.toml
dnas/tables/zomes/coordinator/syn/: Cargo.toml
dnas/tables/zomes/integrity/profiles/: Cargo.toml
dnas/tables/zomes/integrity/syn/: Cargo.toml
ui/: index.html  package.json  vite.config.ts  vite.config.ts.timestamp-1719336345652-28b27ba1cbd3c.mjs
ui/src/: AboutDialog.svelte  AddColumnModal.svelte  App.svelte  AttachmentsDialog.svelte  AttachmentsList.svelte  Avatar.svelte  BoardEditor.svelte  BoardMenu.svelte  BoardMenuItem.svelte  BoardSelect.svelte  Button.svelte  CellDisplay.svelte  CellEdit.svelte  CodeMirror.svelte  Controller.svelte  ControllerBlockActiveBoards.svelte  ControllerBoard.svelte  ControllerCard.svelte  ControllerCreate.svelte  ControllerMirror.svelte  DataHelpers.ts  DataView.svelte  EditBoardDialog.svelte  EditHeader.svelte  EditMirrorDialog.svelte  Entry.svelte  Folk.svelte  GroupParticipants.svelte  LabelSelector.svelte  MirrorMenu.svelte  MirrorMenuItem.svelte  MirrorPane.svelte  NewBoardDialog.svelte  NewMirrorDialog.svelte  Participants.svelte  Queries.svelte  ReactAdapter.svelte  RowDetails.svelte  RowDetailsDrawer.svelte  Search.svelte  (+16 more)
ui/src/icons/: LogoIcon.svelte
we_dev/: config.json  config.ts
weave/: config.ts
workdir/: happ.yaml  web-happ.yaml
